--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                 Message
                             </label>
                             <textarea id="contactMessage" name="message" required 
-                                      placeholder="Please describe your issue or question in detail..."
+                                      placeholder="Please tell us what is in your mind <br> Thank you"
                                       class="form-textarea"></textarea>
                         </div>
                         
@@ -452,4 +452,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
