--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
                     </div>
                 </div>
             </div>
-            <div class="nav-links">
+            <div class="nav-links" id="navLinks">
                 <a href="#submit" class="nav-link">Submit Suggestion</a>
                 <a href="#recent" class="nav-link">Recent</a>
                 <a href="#help" class="nav-link">Help</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
-            <div class="mobile-menu">
-                <i class="fas fa-bars"></i>
-            </div>
+            <button class="mobile-menu" id="mobileMenuBtn" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars" aria-hidden="true"></i>
+                <span class="sr-only">Toggle navigation</span>
+            </button>
         </div>
     </nav>
 
@@ -125,6 +126,42 @@
                 <p>See what other students are suggesting to improve our university</p>
             </div>
             <div id="suggestionsPreview" class="suggestions-preview"></div>
+
+            <!-- Template for a single suggestion (expandable + admin resolution) -->
+            <template id="suggestionTemplate">
+                <div class="suggestion-card" data-id="">
+                    <div class="suggestion-header">
+                        <div class="suggestion-meta">
+                            <div class="suggestion-department"></div>
+                            <div class="suggestion-tag"></div>
+                            <div class="suggestion-date"></div>
+                        </div>
+                        <button class="suggestion-toggle" aria-expanded="false" aria-label="Expand suggestion">+</button>
+                    </div>
+
+                    <div class="suggestion-body" hidden>
+                        <p class="suggestion-text"></p>
+
+                        <div class="suggestion-footer">
+                            <div class="resolution-section">
+                                <div class="existing-resolution" hidden>
+                                    <strong>Resolution:</strong>
+                                    <p class="resolution-text"></p>
+                                </div>
+
+                                <div class="resolution-editor">
+                                    <label class="sr-only" for="resolutionInput">Resolution</label>
+                                    <textarea class="resolution-input" placeholder="Type resolution or admin notes..." rows="4"></textarea>
+                                    <div class="resolution-actions">
+                                        <button class="save-resolution">Save Resolution</button>
+                                        <button class="mark-implemented">Mark Implemented</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </template>
         </div>
     </section>
 
