--- a/admin-login.html
+++ b/admin-login.html
@@ -71,7 +71,7 @@
                 // Redirect to dashboard
                 window.location.href = 'admin-dashboard.html';
             } else {
-                alert('Invalid credentials. Use:\nEmail: admin@muni.ac.ug\nPassword: admin123');
+                alert('Invalid credentials. Please check your email and password. Try again');
             }
         });
 
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
