--- a/admin-login.html
+++ b/admin-login.html
@@ -51,6 +51,11 @@
                         Login
                     </button>
                 </form>
+                
+                <div class="form-footer">
+                    <p><strong>Demo Credentials:</strong><br>Email: admin@muni.ac.ug<br>Password: admin123</p>
+                    <a href="index.html">← Back to Homepage</a>
+                </div>
             </div>
         </div>
     </section>
@@ -71,7 +76,7 @@
                 // Redirect to dashboard
                 window.location.href = 'admin-dashboard.html';
             } else {
-                alert('Invalid credentials. Please check your email and password. Try again');
+                alert('Invalid credentials. Use:\nEmail: admin@muni.ac.ug\nPassword: admin123');
             }
         });
 
@@ -92,6 +97,4 @@
         }
     </script>
 </body>
-
 </html>
-
