--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -149,6 +149,6 @@
         </div>
     </div>
 
-    <script src="admin-dashboard.js"></script>
+    <script type="module" src="admin-dashboard.js"></script>
 </body>
 </html>
