--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script>
     // Fixed toggle button functionality
     (function(){
